k8s-manifests/lamp-webapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lamp-webapp-ms
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: web-kube.hanif.sebelassatu.net
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
  - host: phpmyadmin-kube.hanif.sebelassatu.net
    http:
      paths:
      - backend:
          serviceName: phpmyadmin
          servicePort: 8280
